2008-08-30  Jan-Oliver Wagner <jan-oliver.wagner@intevation.de>

	Start the otp 1.0 module with a first simple method.

	* doc/otp_specification_10.txt: Added documentation
	of OPENVAS_VERSION command.

	* openvasd/otp_1_0.h, openvasd/otp_1_0.c: New. This module will
	implements OTP 1.0 and initially contains
	otp_1_0_server_openvas_version().

	* openvasd/Makefile: Handle module otp_1_0.

	* openvasd/ntp_11.c (ntp_11_parse_input): Call
	otp_1_0_server_openvas_version() instead of sending
	text on its own.

	* MANIFEST: updated.

2008-08-29  Jan-Oliver Wagner <jan-oliver.wagner@intevation.de>

	* doc/kb_entries.txt: Removed those entries that could be
	integrated into openvas-compendium. Ordered the rest alpabetically
	and attached a big hint about the status of these information.

2008-08-29  Michael Wiegand <michael.wiegand@intevation.de>

	Adding preliminary support for OVAL definitions. First step for change
	request #13 (Integrating the OVAL interpreter ovaldi into OpenVAS
	Server) (http://www.openvas.org/openvas-cr-13.html)

	* openvasd/oval_plugins.c: New. Supports a new class of plugins, namely
	vulnerability definitions in OVAL, the Open Vulnerability and
	Assessment Language. Only loading the definitions is supported as of
	this revision.

	* openvasd/Makefile: Updated.

	* openvasd/pluginload.c(init_plugin_classes): Added new
	oval_plugin_class.

	* openvasd/pluginload.h: Added new oval_plugin_class.

	* MANIFEST: Updated.

2008-08-28  Jan-Oliver Wagner <jan-oliver.wagner@intevation.de>

	Cleanup (flaten) doc directory.

	* doc/ntp/: Removed. It was empty now.

	* doc/otp/otp_specification_10.txt: Removed. Moved one
	directory level up.

	* doc/otp_specification_10.txt: Moved here from  otp/ directory.

	* doc/otp/: Removed. It was empty now.

2008-08-28  Jan-Oliver Wagner <jan-oliver.wagner@intevation.de>

	First step of consolidating the protocol documentation
	finished.

	* doc/otp/otp_specification_10.txt: Extended and improved